--- a/views/pages/user/home.ejs
+++ b/views/pages/user/home.ejs
@@ -1,31 +1,32 @@
 <% layout('pages/user/layout') -%>
 
-<h1 class="text-center">Home</h1>
-<form action="/user/award/create" method="post" class="border rounded">
-  <legend>Create Employee Award</legend>
-  <div class="form-group">
-    <label for="type_id">Employee of the</label>
-    <select class="form-control" name="type_id">
-      <% for(var i=0; i<award_types.length; i++) {%>
-        <option value="<%= award_types[i].id %>"><%= award_types[i].name %></option>
-      <% } %>
-    </select>
-  </div>
-  <div class="form-group">
-    <label for="name">Name</label>
-    <input type="text" class="form-control" name="name" required>
-  </div>
-  <div class="form-group">
-    <label for="email">Email Address</label>
-    <input type="email" class="form-control" name="email" required>
-  </div>
-  <div class="form-group">
-    <label for="time">Time</label>
-    <input class="form-control ui-timepicker-input" name="time" required>
-  </div>
-  <div class="form-group">
-    <label for="date">Date</label>
-    <input data-toggle="datepicker" class="form-control" name="date" required>
-  </div>
-  <button type="submit" class="btn btn-primary d-block mx-auto">Submit</button>
-</form>
+<h1 class="text-center">Create Employee Award</h1>
+<div class="card">
+  <form action="/user/award/create" method="post" class="card-body">
+    <div class="form-group">
+      <label for="type_id">Employee of the</label>
+      <select class="form-control" name="type_id">
+        <% for(var i=0; i<award_types.length; i++) {%>
+          <option value="<%= award_types[i].id %>"><%= award_types[i].name %></option>
+        <% } %>
+      </select>
+    </div>
+    <div class="form-group">
+      <label for="name">Name</label>
+      <input type="text" class="form-control" name="name" required>
+    </div>
+    <div class="form-group">
+      <label for="email">Email Address</label>
+      <input type="email" class="form-control" name="email" required>
+    </div>
+    <div class="form-group">
+      <label for="time">Time</label>
+      <input class="form-control ui-timepicker-input" name="time" required>
+    </div>
+    <div class="form-group">
+      <label for="date">Date</label>
+      <input data-toggle="datepicker" class="form-control" name="date" required>
+    </div>
+    <button type="submit" class="btn btn-primary d-block mx-auto">Submit</button>
+  </form>
+</div>
