--- a/views/pages/user/login.ejs
+++ b/views/pages/user/login.ejs
@@ -1,14 +1,16 @@
 <% layout('pages/user/layout') -%>
 
-<form action="/user/login/validate" method="POST">
-  <legend>Log In</legend>
-  <div class="form-group">
-    <label for="email">Email Address</label>
-    <input type="email" class="form-control" name="email" required>
-  </div>
-  <div class="form-group">
-    <label for="password">Password</label>
-    <input type="password" class="form-control" name="password" required>
-  </div>
-  <button type="submit" class="btn btn-primary d-block mx-auto">Submit</button>
-</form>
+<h1 class="text-center">Log In</h1>
+<div class="card">
+  <form action="/user/login/validate" method="POST" class="card-body">
+    <div class="form-group">
+      <label for="email">Email Address</label>
+      <input type="email" class="form-control" name="email" required>
+    </div>
+    <div class="form-group">
+      <label for="password">Password</label>
+      <input type="password" class="form-control" name="password" required>
+    </div>
+    <button type="submit" class="btn btn-primary d-block mx-auto">Submit</button>
+  </form>
+</div>
