--- a/views/pages/admin/createuser.ejs
+++ b/views/pages/admin/createuser.ejs
@@ -43,6 +43,14 @@
 				<input id="inputPassword" type="password" class="form-control" name="password" placeholder="Password" required>
 			</div>
 		</div>
+		<!-- Administrator? -->
+		<div class="form-group">
+			<div class="col-sm-10">
+				<input id="administratorCheck" type="checkbox"/>
+				<label for="administratorCheck" class="col-sm-2 control-label">Administrator</label>
+				<input type="text" style="visibility:hidden" class="input-field" name="administrator" value="false" id="administrator_check">
+			</div>
+		</div>
 		<br>
 
 		<!-- Hidden Fields -->
