reset email functionality working.

--- a/views/pages/user/awards.ejs
+++ b/views/pages/user/awards.ejs
@@ -1,4 +1,4 @@
-<% layout('pages/user/layout') -%>
+<% layout('pages/layout') -%>
 
 <h1 class="text-center">Awards</h1>
 <div class="table-responsive card">
