--- a/views/pages/user/login.ejs
+++ b/views/pages/user/login.ejs
@@ -1,4 +1,4 @@
-<% layout('pages/user/layout') -%>
+<% layout('pages/layout') -%>
 
 <h1 class="text-center">Log In</h1>
 <div class="card">
@@ -9,8 +9,13 @@
     </div>
     <div class="form-group">
       <label for="password">Password</label>
+
       <input type="password" class="form-control" name="password" required>
     </div>
-    <button type="submit" class="btn btn-primary d-block mx-auto">Submit</button>
+    <div class="text-center">
+      <button type="submit" class="btn btn-primary">Submit</button>
+      <br>
+      <a href="/password" class="mt-3 btn btn-link">Forgot Password?</a>
+    </div>
   </form>
 </div>
