clean up code and redirect if user is an adminstrator.

--- a/views/pages/layout.ejs
+++ b/views/pages/layout.ejs
@@ -19,13 +19,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav mr-auto">
              <li class="nav-item">
-               <a class="btn btn-outline-primary btn-sm" href="/user/awards">Display all Awards</a>
+               <a class="btn btn-outline-primary btn-sm" href="/user/awards/index">Display all Awards</a>
              </li>
              <li class="nav-item">
-               <a class="btn btn-outline-primary btn-sm" href="/user/home">Create Award</a>
+               <a class="btn btn-outline-primary btn-sm" href="/user/awards/new">Create Award</a>
              </li>
              <li class="nav-item">
-               <a class="btn btn-outline-primary btn-sm" href="/user/name">Change name</a>
+               <a class="btn btn-outline-primary btn-sm" href="/user/name/edit">Change name</a>
              </li>
           </ul>
           <a class="btn btn-secondary" href="/user/logout">Logout</a>
