--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -2,7 +2,7 @@
 
 <h1 class="text-center">Log In</h1>
 <div class="card">
-  <form action="/user/login/validate" method="POST" class="card-body">
+  <form action="/login/validate" method="POST" class="card-body">
     <div class="form-group">
       <label for="email">Email Address</label>
       <input type="email" class="form-control" name="email" required>
