--- a/views/pages/password/edit.ejs
+++ b/views/pages/password/edit.ejs
@@ -3,8 +3,8 @@
 <h1 class="text-center">Update Password</h1>
 <div class="card">
   <form action="/password/update" method="post" class="card-body">
-    <input type="hidden" name="email" value="<%= req.query.email %>">
-    <input type="hidden" name="reset_token" value="<%= req.query.reset_token %>">
+    <input type="hidden" name="email" value="<%= query.email %>">
+    <input type="hidden" name="reset_token" value="<%= query.reset_token %>">
     <div class="form-group">
       <label for="password">Password</label>
       <input type="password" name="password" class="form-control" required>
