--- a/views/pages/user/awards/new.ejs
+++ b/views/pages/user/awards/new.ejs
@@ -2,7 +2,7 @@
 
 <h1 class="text-center">Create Employee Award</h1>
 <div class="card">
-  <form action="/user/award/create" method="post" class="card-body">
+  <form action="/user/awards/create" method="post" class="card-body">
     <div class="form-group">
       <label for="type_id">Employee of the</label>
       <select class="form-control" name="type_id">
