--- a/views/pages/user/name/edit.ejs
+++ b/views/pages/user/name/edit.ejs
@@ -2,7 +2,7 @@
 
 <h1 class="text-center">Change Name</h1>
 <div class="card">
-  <form action="/user/name/edit" method="post" class="card-body">
+  <form action="/user/name/update" method="post" class="card-body">
     <div class="form-group">
       <label for="fname">First Name</label>
       <input type="text" name="fname" value="<%= user.fname %>" class="form-control" required>
