--- a/views/pages/admin/reports.ejs
+++ b/views/pages/admin/reports.ejs
@@ -15,8 +15,8 @@
 		<div class="container">
 		<h5>Available Reports</h5>
 
-		<input type="radio" name="created_reports" onclick="awardsCreated()">  Users that created awards</input>
-
+		<input type="radio" name="created_reports" onclick="awardsCreated()">  Users that created awards</input><br>
+		<input type="radio" name="created_reports" onclick="awardsOverTime()">  Awards created over time</input>
 		</div>
 	</fieldset>
 
