--- a/views/pages/layout.ejs
+++ b/views/pages/layout.ejs
@@ -10,7 +10,7 @@
   </head>
   <body class="container" style="max-width: 992px">
     <nav class="navbar navbar-light bg-light navbar-expand-md">
-      <a class="navbar-brand" href="/user/home">Employee Recognition App</a>
+      <a class="navbar-brand" href="/user/awards/index">Employee Recognition App</a>
 
       <% if (user) { %>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
