--- a/views/pages/layout.ejs
+++ b/views/pages/layout.ejs
@@ -10,7 +10,7 @@
   </head>
   <body class="container" style="max-width: 992px">
     <nav class="navbar navbar-light bg-light navbar-expand-md">
-      <a class="navbar-brand" href="/user/home">Employee Recognition App</a>
+      <a class="navbar-brand" href="/user/awards/index">Employee Recognition App</a>
 
       <% if (user) { %>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -19,13 +19,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav mr-auto">
              <li class="nav-item">
-               <a class="btn btn-outline-primary btn-sm" href="/user/awards">Display all Awards</a>
+               <a class="btn btn-outline-primary btn-sm" href="/user/awards/index">Display all Awards</a>
              </li>
              <li class="nav-item">
-               <a class="btn btn-outline-primary btn-sm" href="/user/home">Create Award</a>
+               <a class="btn btn-outline-primary btn-sm" href="/user/awards/new">Create Award</a>
              </li>
              <li class="nav-item">
-               <a class="btn btn-outline-primary btn-sm" href="/user/name">Change name</a>
+               <a class="btn btn-outline-primary btn-sm" href="/user/name/edit">Change name</a>
              </li>
           </ul>
           <a class="btn btn-secondary" href="/user/logout">Logout</a>
@@ -35,12 +35,16 @@
 
     <%-body -%>
 
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/datepicker/0.6.5/datepicker.min.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-timepicker/1.10.0/jquery.timepicker.min.js" crossorigin="anonymous"></script>
-    <script src="/js/common.js"></script>
+    <script>
+      $('[data-toggle="datepicker"]').datepicker();
+      $('.ui-timepicker-input').timepicker();
+    </script>
   </body>
 </html>
 
