--- a/views/pages/layout.ejs
+++ b/views/pages/layout.ejs
@@ -28,7 +28,7 @@
                <a class="btn btn-outline-primary btn-sm" href="/user/name/edit">Change name</a>
              </li>
           </ul>
-          <a class="btn btn-secondary" href="/user/logout">Logout</a>
+          <a class="btn btn-secondary" href="/logout">Logout</a>
         </div>
       <% } %>
     </nav>
