add flash messages.

--- a/views/pages/admin/administration.ejs
+++ b/views/pages/admin/administration.ejs
@@ -11,6 +11,7 @@
 
 <body>
 
+
 	<!-- Initial Page Actions -->
 	<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
   	<a class="navbar-brand" href="#">Employee Recognition</a>
@@ -24,6 +25,7 @@
 		</div>
 		</div>
 	</nav>
+        <%- messages('pages/messages_template', locals) %>
 	<br>
 	<br>
 
