--- a/views/pages/admin/edituser.ejs
+++ b/views/pages/admin/edituser.ejs
@@ -49,7 +49,7 @@
 		<img id="signature_image">
 		</div>
 
-		<input type="button" class="col-sm-2" id="signature_edits_btn" value="Change Signature" onclick="updateSignature()">
+		<input type="button" class="col-sm-4" id="signature_edits_btn" value="Change Signature" onclick="updateSignature()">
 		<input type="button" class="col-sm-2" id="delete_user_edits_btn" value="Delete User" onclick="deleteUser()"><br><br>
 	  	<input type="submit" class="col-sm-2" name="Update User" value="Update User">
 
@@ -64,10 +64,10 @@
   <!-- Update Signature -->
   <fieldset class="starthidden" id="editable_user_signature">
     <div class="wrapper">
-      <canvas id="signature-pad2" class="signature-pad" width=400 height=200></canvas>
+      <canvas id="signature-pad2" class="signature-pad" width=200 height=100></canvas>
     </div>
     <button id="save-png">Save as PNG</button>
-	<button id="clear">Clear</button>
+	<button type="button" id="clear" onclick="clearSignature()">Clear</button>
   </fieldset>
 
 <!-- Select Existing User -->
