--- a/views/pages/admin/reports.ejs
+++ b/views/pages/admin/reports.ejs
@@ -5,7 +5,6 @@
 	<title>New User</title>
     <link rel="stylesheet" href="/css/style.css" type="text/css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
 </head>
 
 <body>
@@ -14,25 +13,22 @@
 	<fieldset id="reports_fields">
 		<div class="container">
 		<h5>Available Reports</h5>
-
+		<input type="radio" name="created_reports" onclick="displayAllUsers()">  All Users</input><br>
 		<input type="radio" name="created_reports" onclick="displayAllAwards()">  All Awards</input><br>
-
 		<input type="radio" name="created_reports" onclick="awardsCreated()">  Award Givers</input><br>
 		<input type="radio" name="created_reports" onclick="awardsOverTime()">  Awards created over time</input>
 		</div>
 	</fieldset>
 
+	<div class="container">
+		<div class="row" height=50><br></div>
+	</div>
+
 	<!-- Report Area -->
 	<fieldset class="starthidden" id="report_area">
-		<div id="report">Report Area
-
-    	</div>
+		<div id="report">Report Area</div>
 	</fieldset>
 
-
-	<div class="container" height=200>
-
-	</div>
 	
 	<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
@@ -44,9 +40,9 @@
 
 	<script src="/js/common.js"></script>
 	<script src="/js/reports.js"></script>
-	  <script type="text/javascript">
-    google.charts.load('current', {packages: ['corechart']});
-	google.charts.load('current', {'packages':['table']});
+	<script type="text/javascript">
+    	google.charts.load('current', {packages: ['corechart']});
+		google.charts.load('current', {'packages':['table']});
 	</script>
 
 </body>
