--- a/views/pages/admin/reports.ejs
+++ b/views/pages/admin/reports.ejs
@@ -1,53 +1,59 @@
+<!-- reports.ejs
+  Jackie Bradnan
+  Oct 14, 2018
+  Employee Recognition App - Reports
+ -->
+
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="utf-8">
 	<title>New User</title>
-    <link rel="stylesheet" href="/css/style.css" type="text/css">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
+	<link rel="stylesheet" href="/css/style.css" type="text/css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+	 crossorigin="anonymous">
 </head>
 
 <body>
-
 	<!-- Show Available Reports -->
 	<fieldset id="reports_fields">
 		<div class="container">
-		<h5>Available Reports</h5>
-
-		<input type="radio" name="created_reports" onclick="displayAllAwards()">  All Awards</input><br>
-
-		<input type="radio" name="created_reports" onclick="awardsCreated()">  Award Givers</input><br>
-		<input type="radio" name="created_reports" onclick="awardsOverTime()">  Awards created over time</input>
+			<h5>Available Reports</h5>
+			<input type="radio" name="created_reports" onclick="displayAllUsers()"> All Users</input><br>
+			<input type="radio" name="created_reports" onclick="displayAllAwards()"> All Awards</input><br>
+			<input type="radio" name="created_reports" onclick="awardsCreated()"> Award Givers</input><br>
+			<input type="radio" name="created_reports" onclick="awardsOverTime()"> Awards created over time</input>
 		</div>
 	</fieldset>
 
+	<div class="container">
+		<div class="row" height=50><br></div>
+	</div>
+
 	<!-- Report Area -->
 	<fieldset class="starthidden" id="report_area">
-		<div id="report">Report Area
-
-    	</div>
+		<div id="report">Report Area</div>
 	</fieldset>
 
-
-	<div class="container" height=200>
-
-	</div>
-	
-	<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+	 crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+	 crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/signature_pad@2.3.2/dist/signature_pad.min.js"></script>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+	 crossorigin="anonymous"></script>
 	<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 	<script src="https://cdn.jsdelivr.net/momentjs/2.13.0/moment.min.js"></script>
 
 	<script src="/js/common.js"></script>
 	<script src="/js/reports.js"></script>
-	  <script type="text/javascript">
-    google.charts.load('current', {packages: ['corechart']});
-	google.charts.load('current', {'packages':['table']});
+	<script type="text/javascript">
+		google.charts.load('current', { packages: ['corechart'] });
+		google.charts.load('current', { 'packages': ['table'] });
 	</script>
 
 </body>
+
 </html>
