--- a/views/pages/admin/administration.ejs
+++ b/views/pages/admin/administration.ejs
@@ -1,90 +1,79 @@
+<!-- Administration.ejs
+  Jackie Bradnan
+  Oct 14, 2018
+  Employee Recognition App - Administration
+ -->
+
 <!DOCTYPE html>
 <html>
+
 <head>
-	<meta charset="utf-8">
-	<title>Administration Page</title>
+    <meta charset="utf-8">
+    <title>Administration Page</title>
     <link rel="stylesheet" href="/css/style.css" type="text/css">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
-
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+        crossorigin="anonymous">
 </head>
 
 <body>
+    <!-- Initial Page Actions -->
+    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Employee Recognition</a>
+        <div class="nav navbar-nav container-fluid">
+            <li class="nav" id="newUserNavigation" onclick="createNewUser()">New User</li>
+            <li class="nav" id="editUserNavigation" onclick="displayUserList()">Edit User</li>
+            <li class="nav" id="reportsNavigation" onclick="reportsDisplay()">Reporting</li>
+            <a href="/logout" class="nav">Logout</a>
+        </div>
+        </div>
+    </nav>
+    <%- messages('pages/messages_template', locals) %>
+    <br>
+    <br>
 
+    <script>
+        function getDocHeight(doc) {
+            doc = doc || document;
+            // stackoverflow.com/questions/1145850/
+            var body = doc.body, html = doc.documentElement;
+            var height = Math.max(body.scrollHeight, body.offsetHeight,
+                html.clientHeight, html.scrollHeight, html.offsetHeight);
+            return height;
+        }
 
-	<!-- Initial Page Actions -->
-	<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-  	<a class="navbar-brand" href="#">Employee Recognition</a>
-		<div class="nav navbar-nav container-fluid">
-			<li class="nav" id="allUsersNavigation" onclick="showUsers()">All Users</li>
-			<li class="nav" id="newUserNavigation" onclick="createNewUser()">New User</li>
-			<li class="nav" id="editUserNavigation" onclick="displayUserList()">Edit User</li>
-			<li class="nav" id="reportsNavigation" onclick="reportsDisplay()">Reporting</li>
-			<li class="nav" id="searchNavigation" onclick="searchForUser()">Search</li>
-                        <a href="/logout" class="nav">Logout</a>
-		</div>
-		</div>
-	</nav>
-        <%- messages('pages/messages_template', locals) %>
-	<br>
-	<br>
+        function setIframeHeight(id) {
+            var ifrm = document.getElementById(id);
+            var doc = ifrm.contentDocument ? ifrm.contentDocument :
+                ifrm.contentWindow.document;
+            ifrm.style.visibility = 'hidden';
+            ifrm.style.height = "10px"; // reset to minimal height ...
+            // IE opt. for bing/msn needs a bit added or scrollbar appears
+            ifrm.style.height = getDocHeight(doc) + 500 + "px";
+            ifrm.style.visibility = 'visible';
+        }
+    </script>
 
-
-<script>
-
-function getDocHeight(doc) {
-    doc = doc || document;
-    // stackoverflow.com/questions/1145850/
-    var body = doc.body, html = doc.documentElement;
-    var height = Math.max( body.scrollHeight, body.offsetHeight,
-        html.clientHeight, html.scrollHeight, html.offsetHeight );
-    return height;
-}
-
-function setIframeHeight(id) {
-    var ifrm = document.getElementById(id);
-    var doc = ifrm.contentDocument? ifrm.contentDocument:
-        ifrm.contentWindow.document;
-    ifrm.style.visibility = 'hidden';
-    ifrm.style.height = "10px"; // reset to minimal height ...
-    // IE opt. for bing/msn needs a bit added or scrollbar appears
-    ifrm.style.height = getDocHeight( doc ) + 400 + "px";
-    ifrm.style.visibility = 'visible';
-}
-
-
-
-</script>
-<!-- Content Area
+    <!-- Content Area
 https://www.dyn-web.com/tutorials/iframes/height/
 -->
-<div class="container">
- 	<iframe id="admin_content-area" frameBorder="0" marginheight="50" class="embed-responsive-item"  width="500" onload="setIframeHeight(this.id)"></iframe>
-</div>
-
-
-
-
-	<!-- Search For User -->
-	<fieldset class="starthidden" id="search_for_user">
-		<div class="form-group" id="search_controls">
-			<h5>Type in name of user to search for...</h5>
-			<label class="col-sm-2 control-label">Name: <input type="text" class="input-field" id="name_search" required></label >
-    <input type="button" id="search_btn" value="search" onclick="searchForUser()">
+    <div class="container">
+        <iframe id="admin_content-area" frameBorder="0" marginheight="50" class="embed-responsive-item" width="900"
+            onload="setIframeHeight(this.id)"></iframe>
     </div>
-</fieldset>
 
-</div>
+    </div>
 
-	<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/signature_pad@2.3.2/dist/signature_pad.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/signature_pad@2.3.2/dist/signature_pad.min.js"></script>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-	<script src="/js/common.js"></script>
-	<script src="/js/administration.js"></script>
-
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="/js/common.js"></script>
+    <script src="/js/administration.js"></script>
 
 </body>
+
 </html>
