--- a/views/pages/admin/edituser.ejs
+++ b/views/pages/admin/edituser.ejs
@@ -1,104 +1,115 @@
+<!-- edituser.ejs
+  Jackie Bradnan
+  Oct 14, 2018
+  Employee Recognition App - Edit user data
+ -->
+
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="utf-8">
 	<title>New User</title>
-    <link rel="stylesheet" href="/css/style.css" type="text/css">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
+	<link rel="stylesheet" href="/css/style.css" type="text/css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+	 crossorigin="anonymous">
 </head>
 
 <body>
-
 	<!-- Edit User -->
 	<fieldset class="starthidden" id="editable_user_fields">
-	<div class="container">
-		<h5>Edit User Information</h5>
-		<form method="post" class="form-horizontal" id="editUserForm" action="/update-user">
-		<!-- First Name -->
-		<div class="form-group">
-			<label for="user_fname_edit" class="col-sm-2 control-label">First Name</label>
-			<div class="col-sm-10">
-				<input id="user_fname_edit" type="text" class="form-control input-field" name="fname" placeholder="First Name" required>
-			</div>
-		</div>
-		<!-- Last Name -->
-		<div class="form-group">
-			<label for="user_lname_edit" class="col-sm-2 control-label">Last Name</label>
-			<div class="col-sm-10">
-				<input id="user_lname_edit" type="text" class="form-control input-field" name="lname" placeholder="Last Name" required>
-			</div>
-		</div>
-		<!-- Email -->
-		<div class="form-group">
-			<label for="user_email_edit" class="col-sm-2 control-label">Email</label>
-			<div class="col-sm-10">
-				<input id="user_email_edit" type="email" class="form-control input-field" name="email" placeholder="Email" required>
-			</div>
-		</div>
-		<!-- Password -->
-		<div class="form-group">
-			<label for="user_password_edit" class="col-sm-2 control-label">Password</label>
-			<div class="col-sm-10">
-				<input id="user_password_edit" type="password" class="form-control input-field" name="password" placeholder="Password" required>
-			</div>
-		</div>
-		<!-- Signature -->
-		<div class="form-group">
-		<label for="signature_img" class="col-sm-2 control-label">Signature</label>
-		<img id="signature_image">
-		</div>
+		<div class="container">
+			<h5>Edit User Information</h5>
+			<form method="post" class="form-horizontal" id="editUserForm" action="/update-user">
+				<!-- First Name -->
+				<div class="form-group">
+					<label for="user_fname_edit" class="col-sm-2 control-label">First Name</label>
+					<div class="col-sm-10">
+						<input id="user_fname_edit" type="text" class="form-control input-field" name="fname" placeholder="First Name"
+						 required>
+					</div>
+				</div>
+				<!-- Last Name -->
+				<div class="form-group">
+					<label for="user_lname_edit" class="col-sm-2 control-label">Last Name</label>
+					<div class="col-sm-10">
+						<input id="user_lname_edit" type="text" class="form-control input-field" name="lname" placeholder="Last Name"
+						 required>
+					</div>
+				</div>
+				<!-- Email -->
+				<div class="form-group">
+					<label for="user_email_edit" class="col-sm-2 control-label">Email</label>
+					<div class="col-sm-10">
+						<input id="user_email_edit" type="email" class="form-control input-field" name="email" placeholder="Email"
+						 required>
+					</div>
+				</div>
+				<!-- Password -->
+				<div class="form-group">
+					<label for="user_password_edit" class="col-sm-2 control-label">Password</label>
+					<div class="col-sm-10">
+						<input id="user_password_edit" type="password" class="form-control input-field" name="password" placeholder="Password"
+						 required>
+					</div>
+				</div>
+				<!-- Signature -->
+				<div class="form-group">
+					<label for="signature_img" class="col-sm-2 control-label">Signature</label>
+					<img id="signature_image">
+				</div>
 
-		<input type="button" class="col-sm-2" id="signature_edits_btn" value="Change Signature" onclick="updateSignature()">
-		<input type="button" class="col-sm-2" id="delete_user_edits_btn" value="Delete User" onclick="deleteUser()"><br><br>
-	  	<input type="submit" class="col-sm-2" name="Update User" value="Update User">
+				<input type="button" class="col-sm-4" id="signature_edits_btn" value="Change Signature" onclick="updateSignature()">
+				<input type="button" class="col-sm-2" id="delete_user_edits_btn" value="Delete User" onclick="deleteUser()"><br><br>
+				<input type="submit" class="col-sm-2" name="Update User" value="Update User">
 
-	  <!-- Hidden Fields -->
-	  <input type="text" style="visibility:hidden" id="user_id_edit" name="id">
-	  <input type="text" style="visibility:hidden" class="input-field" name="signature" id="user_signature_edit">
-	</div>
-	</form>
-	  
-  </fieldset>
+				<!-- Hidden Fields -->
+				<input type="text" style="visibility:hidden" id="user_id_edit" name="id">
+				<input type="text" style="visibility:hidden" class="input-field" name="signature" id="user_signature_edit">
+		</div>
+		</form>
 
-  <!-- Update Signature -->
-  <fieldset class="starthidden" id="editable_user_signature">
-    <div class="wrapper">
-      <canvas id="signature-pad2" class="signature-pad" width=400 height=200></canvas>
-    </div>
-    <button id="save-png">Save as PNG</button>
-	<button id="clear">Clear</button>
-  </fieldset>
-
-<!-- Select Existing User -->
-<div class="container">
-	<fieldset id="select_user">
-		<h5>Select a User to Edit</h5>
-          <ul style="list-style-type:none">
-            <% results.forEach(function(r) { %>
-              <li>
-              <input type="radio" name="selected_user" value=<%= r.id %> onclick="editUser()">
-              <%= r.fname %>, <%=r.lname %>
-              </li>
-            <% }); %>
-          </ul>
 	</fieldset>
-</div>
 
+	<!-- Update Signature -->
+	<fieldset class="starthidden" id="editable_user_signature">
+		<div class="wrapper">
+			<canvas id="signature-pad2" class="signature-pad" width=200 height=100></canvas>
+		</div>
+		<button id="save-png">Save as PNG</button>
+		<button type="button" id="clear" onclick="clearSignature()">Clear</button>
+	</fieldset>
+
+	<!-- Select Existing User -->
+	<div class="container">
+		<fieldset id="select_user">
+			<h5>Select a User to Edit</h5>
+			<ul style="list-style-type:none">
+				<% results.forEach(function(r) { %>
+				<li>
+					<input type="radio" name="selected_user" value=<%=r.id %> onclick="editUser()">
+					<%= r.fname %>,
+					<%=r.lname %>
+				</li>
+				<% }); %>
+			</ul>
+		</fieldset>
+	</div>
+	</div>
 
 	</div>
 
-	<div class="container" height=200>
-
-	</div>
-	
-	<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+	 crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+	 crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/signature_pad@2.3.2/dist/signature_pad.min.js"></script>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+	 crossorigin="anonymous"></script>
 	<script src="/js/common.js"></script>
 	<script src="/js/edituser.js"></script>
 
 </body>
+
 </html>
