update schema for signature not null and added handling on new user

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,6 +19,13 @@ canvas {
     display:none;
 }
 
+.visible {
+    visibility: visible;
+  }
+  .invisible {
+    visibility: hidden;
+  }
+
 #error_text {
     color: red;
     font-size: 200%;
