adding additional report where you can search by user and see their awards

--- a/views/pages/admin/administration.ejs
+++ b/views/pages/admin/administration.ejs
@@ -15,7 +15,7 @@
         crossorigin="anonymous">
 </head>
 
-<body>
+<body onload="initialPageView()">
     <!-- Initial Page Actions -->
     <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">Employee Recognition</a>
