--- a/views/pages/admin/reports.ejs
+++ b/views/pages/admin/reports.ejs
@@ -23,7 +23,9 @@
 			<input type="radio" name="created_reports" onclick="displayAllUsers()"> All Users</input><br>
 			<input type="radio" name="created_reports" onclick="displayAllAwards()"> All Awards</input><br>
 			<input type="radio" name="created_reports" onclick="awardsCreated()"> Award Givers</input><br>
-			<input type="radio" name="created_reports" onclick="awardsOverTime()"> Awards created over time</input>
+			<input type="radio" name="created_reports" onclick="awardsOverTime()"> Awards created over time</input><br>
+			<input type="radio" name="created_reports" onclick="userSearchUX()"> Search for specific user awards</input>
+
 		</div>
 	</fieldset>
 
@@ -33,26 +35,36 @@
 
 	<!-- Report Area -->
 	<fieldset class="starthidden" id="report_area">
-		<div id="report">Report Area</div>
-	</fieldset>
+		<div id="search" class="starthidden">
+			<!-- Search For User -->
+			<fieldset id="search_for_user">
+				<div class="form-group" id="search_controls">
+					<h5>Type in name of user to search for...</h5>
+					<div class="row">
+						<label class="col-sm-4 control-label">Name: <input type="text" class="input-field" id="name_search" required></label>
+						<input type="button" id="search_btn" value="search" onclick="searchForUser()">
+					</div>
+				</div>
+				<div id="report"></div>
+			</fieldset>
 
-	<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-	 crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-	 crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/signature_pad@2.3.2/dist/signature_pad.min.js"></script>
+			<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+			 crossorigin="anonymous"></script>
+			<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+			 crossorigin="anonymous"></script>
+			<script src="https://cdn.jsdelivr.net/npm/signature_pad@2.3.2/dist/signature_pad.min.js"></script>
 
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-	 crossorigin="anonymous"></script>
-	<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-	<script src="https://cdn.jsdelivr.net/momentjs/2.13.0/moment.min.js"></script>
+			<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+			 crossorigin="anonymous"></script>
+			<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+			<script src="https://cdn.jsdelivr.net/momentjs/2.13.0/moment.min.js"></script>
 
-	<script src="/js/common.js"></script>
-	<script src="/js/reports.js"></script>
-	<script type="text/javascript">
-		google.charts.load('current', { packages: ['corechart'] });
-		google.charts.load('current', { 'packages': ['table'] });
-	</script>
+			<script src="/js/common.js"></script>
+			<script src="/js/reports.js"></script>
+			<script type="text/javascript">
+				google.charts.load('current', { packages: ['corechart'] });
+				google.charts.load('current', { 'packages': ['table'] });
+			</script>
 
 </body>
 
