--- a/views/pages/admin/reports.ejs
+++ b/views/pages/admin/reports.ejs
@@ -23,7 +23,9 @@
 			<input type="radio" name="created_reports" onclick="displayAllUsers()"> All Users</input><br>
 			<input type="radio" name="created_reports" onclick="displayAllAwards()"> All Awards</input><br>
 			<input type="radio" name="created_reports" onclick="awardsCreated()"> Award Givers</input><br>
-			<input type="radio" name="created_reports" onclick="awardsOverTime()"> Awards created over time</input>
+			<input type="radio" name="created_reports" onclick="awardsOverTime()"> Awards created over time</input><br>
+			<input type="radio" name="created_reports" onclick="userSearchUX()"> Search for specific user awards</input>
+
 		</div>
 	</fieldset>
 
@@ -33,7 +35,20 @@
 
 	<!-- Report Area -->
 	<fieldset class="starthidden" id="report_area">
-		<div id="report">Report Area</div>
+		<div id="search" class="starthidden">
+			<!-- Search For User -->
+			<fieldset id="search_for_user">
+				<div class="form-group" id="search_controls">
+					<h5>Type in name of user to search for...</h5>
+					<div class="row">
+						<label class="col-sm-4 control-label">Name: <input type="text" class="input-field" id="name_search" required></label>
+						<input type="button" id="search_btn" value="search" onclick="searchForUser()">
+					</div>
+					<div id="error_text" class="alert alert-warning invisible"></div>
+				</div>
+			</fieldset>
+		</div>
+		<div id="report"></div>
 	</fieldset>
 
 	<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
