added route in index.js to show URL

--- a/views/pages/user/awards/index.ejs
+++ b/views/pages/user/awards/index.ejs
@@ -36,3 +36,14 @@
     </tbody>
   </table>
 </div>
+<br>
+<div>
+  <form action="/user/awards/show" method="get">
+    <button type="submit" class="btn btn-primary d-block mx-auto">Show Sent Award</button>
+  </form>
+</div>
+<br>
+<div>
+  <p class="text-center">To see the sent award, please copy and paste the URL above into your browser.<br>
+   <b>Note:</b> it takes a few seconds for the URL to load. Click on the button again until it appears.<br>
+</div>
